Deprecated CommponentTestFixture and clean up tests. Closes #108

--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -2,30 +2,32 @@ root = true
 
 [*]
 indent_style = tab
+indent_size = tab
+tab_size = 4
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
 [*.cs]
-indent_size = 4
+tab_size = 4
 dotnet_sort_system_directives_first = true
 
 [*.{xml,config,*proj,nuspec,props,resx,targets,yml,tasks}]
-indent_size = 2
+tab_size = 2
 
 [*.{htm,html,css,scss}]
-indent_size = 2
+tab_size = 2
 
 [*.json]
-indent_size = 2
+tab_size = 2
 
 [*.{ps1,psm1}]
-indent_size = 4
+tab_size = 4
 
 [*.sh]
-indent_size = 4
+tab_size = 4
 end_of_line = lf
 
 [*.{yml,yaml}]
 indent_style = space
-indent_size = 2
+tab_size = 2
