--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -9,18 +9,14 @@ on:
 env:
   VERSION: 1337.0.0
   BRANCH: ''
-  COMMIT: ''
   
 jobs:  
   build:
     name: Build and verify library    
     runs-on: ubuntu-latest  
     steps:
-      - name: Setting environment variables
-        run: |
-          echo "::set-env name=BRANCH::$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//_/g')"
-          echo "::set-env name=COMMIT::$GITHUB_SHA"
-      - run: echo Version $VERSION - Branch $BRANCH - Commit $COMMIT
+      - name: Getting branch name
+        run: echo "::set-env name=BRANCH::$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//_/g')"
       - uses: actions/checkout@v2   
       - name: Update tokens in project files
         uses: cschleiden/replace-tokens@v1
@@ -32,19 +28,19 @@ jobs:
       - name: Building and verifying library
         run: |
           dotnet restore src
-          dotnet build src -c Release --no-restore
+          dotnet build src -c Release --no-restore -p:version=$VERSION -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true
           dotnet test src -c Release --no-restore --verbosity normal /nowarn:CS1591          
       - name: Creating library package
         run: |
-          dotnet pack src/bunit.core/ -c Release -o ${GITHUB_WORKSPACE}/lib -p:version=$VERSION /nowarn:CS1591
-          dotnet pack src/bunit.web/ -c Release -o ${GITHUB_WORKSPACE}/lib -p:version=$VERSION /nowarn:CS1591
-          dotnet pack src/bunit.xunit/ -c Release -o ${GITHUB_WORKSPACE}/lib -p:version=$VERSION /nowarn:CS1591
-          dotnet pack src/bunit/ -c Release -o ${GITHUB_WORKSPACE}/lib -p:version=$VERSION /nowarn:CS1591          
-#      - name: Buidling template package
-#        run: dotnet pack templates/bunit-project/ -c Release -o ${GITHUB_WORKSPACE}/templates -p:version=$VERSION -p:PackageVersion=$VERSION
-#      - name: Verifying template
-#        run: |
-#          dotnet new --install ${GITHUB_WORKSPACE}/templates/bunit.template.$VERSION.nupkg
-#          dotnet new bunit -o ${GITHUB_WORKSPACE}/Test
-#          dotnet restore ${GITHUB_WORKSPACE}/Test/Test.csproj --source ${GITHUB_WORKSPACE}/lib
-#          dotnet test ${GITHUB_WORKSPACE}/Test
+          dotnet pack src/bunit.core/ -c Release -o ${GITHUB_WORKSPACE}/lib -p:version=$VERSION -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true
+          dotnet pack src/bunit.web/ -c Release -o ${GITHUB_WORKSPACE}/lib -p:version=$VERSION -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true
+          dotnet pack src/bunit.xunit/ -c Release -o ${GITHUB_WORKSPACE}/lib -p:version=$VERSION -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true
+          dotnet pack src/bunit/ -c Release -o ${GITHUB_WORKSPACE}/lib -p:version=$VERSION -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true
+      - name: Buidling template package
+        run: dotnet pack templates/bunit-project/ -c Release -o ${GITHUB_WORKSPACE}/templates -p:version=$VERSION
+      - name: Verifying template
+        run: |
+          dotnet new --install ${GITHUB_WORKSPACE}/templates/bunit.template.$VERSION.nupkg
+          dotnet new bunit --no-restore -o ${GITHUB_WORKSPACE}/Test
+          dotnet restore ${GITHUB_WORKSPACE}/Test/Test.csproj --source ${GITHUB_WORKSPACE}/lib
+          dotnet test ${GITHUB_WORKSPACE}/Test
