--- a/templates/bunit-project/template/Company.BlazorTests1.csproj
+++ b/templates/bunit-project/template/Company.BlazorTests1.csproj
@@ -7,8 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="bunit" Version="#{VERSION}#" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    <PackageReference Include="bunit.core" Version="#{VERSION}#" />
+    <PackageReference Include="bunit.web" Version="#{VERSION}#" />
+    <PackageReference Include="bunit.xunit" Version="#{VERSION}#" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
       <PrivateAssets>all</PrivateAssets>
