--- a/src/bunit.web/bunit.web.csproj
+++ b/src/bunit.web/bunit.web.csproj
@@ -40,11 +40,11 @@
 		<PackageReference Include="AngleSharp.Css" Version="0.14.0" />
 		<PackageReference Include="AngleSharp.Diffing" Version="0.14.0" />
 		<PackageReference Include="AngleSharp.Wrappers" Version="1.2.0" />
-		<PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.*" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.*" />
-		<PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.*" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.*" />
-		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.*" PrivateAssets="All" />
+		<PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.1" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.1" />
+		<PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.1" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.1" />
+		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
 	</ItemGroup>
 
 	<ItemGroup>
