--- a/sample/tests/SampleApp.Tests.csproj
+++ b/sample/tests/SampleApp.Tests.csproj
@@ -3,11 +3,15 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <IsPackable>false</IsPackable>
+    <LangVersion>8.0</LangVersion>
+    <Nullable>enable</Nullable>
+    <WarningsAsErrors>CS8600;CS8602;CS8603;CS8625</WarningsAsErrors>
     <RootNamespace>Bunit.SampleApp</RootNamespace>
     <AssemblyName>Bunit.SampleApp.Tests</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="bunit" Version="1.0.0-beta-7" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
     <PackageReference Include="Moq" Version="4.13.1" />
     <PackageReference Include="Shouldly" Version="3.0.2" />
@@ -21,7 +25,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\src\SampleApp.csproj" />
-    <ProjectReference Include="..\..\src\bunit.csproj" />
   </ItemGroup>
 
 </Project>
