--- a/src/bunit.xunit/bunit.xunit.csproj
+++ b/src/bunit.xunit/bunit.xunit.csproj
@@ -3,7 +3,7 @@
 	<PropertyGroup>
 		<TargetFramework>netstandard2.1</TargetFramework>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
-		<RootNamespace>Bunit</RootNamespace>
+		<RootNamespace>Bunit.Xunit</RootNamespace>
 		<AssemblyName>Bunit.Xunit</AssemblyName>
 	</PropertyGroup>
 
