Removed Bunit from the sample projects namespace

--- a/sample/src/SampleApp.csproj
+++ b/sample/src/SampleApp.csproj
@@ -3,8 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <IsPackable>false</IsPackable>
-    <RootNamespace>Bunit.SampleApp</RootNamespace>
-    <AssemblyName>Bunit.SampleApp</AssemblyName>
+    <RootNamespace>SampleApp</RootNamespace>
+    <AssemblyName>SampleApp</AssemblyName>    
   </PropertyGroup>
 
 </Project>
