--- a/sample/tests/SampleApp.Tests.csproj
+++ b/sample/tests/SampleApp.Tests.csproj
@@ -6,8 +6,8 @@
     <LangVersion>8.0</LangVersion>
     <Nullable>enable</Nullable>
     <WarningsAsErrors>CS8600;CS8602;CS8603;CS8625</WarningsAsErrors>
-    <RootNamespace>Bunit.SampleApp</RootNamespace>
-    <AssemblyName>Bunit.SampleApp.Tests</AssemblyName>
+    <RootNamespace>SampleApp</RootNamespace>
+    <AssemblyName>SampleApp.Tests</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
