--- a/.github/workflows/nuget-pack-push.yml
+++ b/.github/workflows/nuget-pack-push.yml
@@ -28,7 +28,7 @@ jobs:
       - uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '3.1.202'
-      - name: Building and verifying library
+      - name: Building library
         run: |
           dotnet restore src
           dotnet build src/bunit.core/ -c Release --no-restore -p:version=$VERSION -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true
@@ -36,7 +36,11 @@ jobs:
           dotnet build src/bunit.xunit/ -c Release --no-restore -p:version=$VERSION -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true
           dotnet build src/bunit/ -c Release --no-restore -p:version=$VERSION -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true
           dotnet build src/bunit.testassets/ -c Release --no-restore
-          dotnet test src -c Release --no-restore --verbosity normal /nowarn:CS1591          
+      - name: Running unit tests
+        run: |
+          dotnet test src/bunit.core.tests/ -c Release --no-restore --verbosity normal /nowarn:CS1591
+          dotnet test src/bunit.web.tests/ -c Release --no-restore --verbosity normal /nowarn:CS1591
+          dotnet test src/bunit.xunit.tests/ -c Release --no-restore --verbosity normal /nowarn:CS1591
       - name: Creating library package
         run: |
           dotnet pack src/bunit.core/ -c Release -o ${GITHUB_WORKSPACE}/lib -p:version=$VERSION -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true
