--- a/src/bunit.xunit/bunit.xunit.csproj
+++ b/src/bunit.xunit/bunit.xunit.csproj
@@ -35,12 +35,16 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.1" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.1" />
-		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
 		<PackageReference Include="SourceFileFinder" Version="1.0.0-preview-1" />
 		<PackageReference Include="System.Reflection.Metadata" Version="1.8.1" />
 		<PackageReference Include="xunit.assert" Version="2.4.0" />
 		<PackageReference Include="xunit.extensibility.core" Version="2.4.0" />
 		<PackageReference Include="xunit.extensibility.execution" Version="2.4.0" />
+		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+		<PackageReference Include="Nerdbank.GitVersioning" Version="3.1.91">
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		  <PrivateAssets>all</PrivateAssets>
+		</PackageReference>
 	</ItemGroup>
 
 	<ItemGroup>
