--- a/src/bunit/bunit.csproj
+++ b/src/bunit/bunit.csproj
@@ -25,6 +25,13 @@ If you prefer Nunit or MSTest, just install the “bunit.core” and “bunit.we
 		</Description>
   </PropertyGroup>
 
+	<ItemGroup>
+		<PackageReference Include="Nerdbank.GitVersioning" Version="3.1.91">
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		  <PrivateAssets>all</PrivateAssets>
+		</PackageReference>
+	</ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\bunit.core\bunit.core.csproj" />
     <ProjectReference Include="..\bunit.web\bunit.web.csproj" />
