--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -58,5 +58,5 @@ jobs:
           dotnet test ${GITHUB_WORKSPACE}/Test
       - name: Push packages to GitHub Packages
         run: | 
-          dotnet nuget push ${GITHUB_WORKSPACE}/lib/*.nupkg -k ${{ secrets.GITHUB_TOKEN }} -s https://nuget.pkg.github.com/egil/index.json --skip-duplicate
-          dotnet nuget push ${GITHUB_WORKSPACE}/template/*.nupkg -k ${{ secrets.GITHUB_TOKEN }} -s https://nuget.pkg.github.com/egil/index.json --skip-duplicate
+          dotnet nuget push ${GITHUB_WORKSPACE}/lib/*.nupkg -k ${{ secrets.GH_PACKAGES_KEY }} -s https://nuget.pkg.github.com/egil/index.json --skip-duplicate
+          dotnet nuget push ${GITHUB_WORKSPACE}/template/*.nupkg -k ${{ secrets.GH_PACKAGES_KEY }} -s https://nuget.pkg.github.com/egil/index.json --skip-duplicate
