--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -30,7 +30,7 @@ jobs:
       - uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '3.1.202' 
-          source-url: https://nuget.pkg.github.com/bjorhn/index.json
+          source-url: https://nuget.pkg.github.com/egil/index.json
         env:
           NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}          
       - name: Building library
