--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: dotnet/nbgv@master
         with:
           setAllVars: true
-      - run: echo "NBGV_SemVer2 $NBGV_SemVer2"     
+      - run: echo "NBGV_SemVer2 $NBGV_SemVer2"
       - run: echo "::set-env name=VERSION::$NBGV_NuGetPackageVersion"
       - run: echo "::set-env name=BRANCH::$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//_/g')"
       - name: Update tokens in project files
@@ -60,4 +60,4 @@ jobs:
           dotnet restore ${GITHUB_WORKSPACE}/Test/Test.csproj --source ${GITHUB_WORKSPACE}/packages
           dotnet test ${GITHUB_WORKSPACE}/Test
       - name: Push packages to GitHub Packages
-        run: dotnet nuget push '${GITHUB_WORKSPACE}/packages/*.nupkg' --skip-duplicate
+        run: dotnet nuget push '${{GITHUB_WORKSPACE}}/packages/*.nupkg' --skip-duplicate
