--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -6,11 +6,6 @@ on:
       - dev
     paths-ignore:
       - 'docs/**'
-  pull_request:
-    branches:
-      - dev
-    paths-ignore:
-      - 'docs/**'
 
 env:
   VERSION: ''
@@ -27,9 +22,10 @@ jobs:
       - uses: dotnet/nbgv@master
         with:
           setAllVars: true
-      - run: echo "NBGV_SemVer2 $NBGV_SemVer2"
-      - run: echo "::set-env name=VERSION::$NBGV_NuGetPackageVersion"
-      - run: echo "::set-env name=BRANCH::$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//_/g')"
+      - name: Setting VERSION and BRANCH env
+        run: |
+          echo "::set-env name=VERSION::$NBGV_NuGetPackageVersion"
+          echo "::set-env name=BRANCH::$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//_/g')"
       - name: Update tokens in project files
         uses: cschleiden/replace-tokens@v1
         with:
