--- a/nuget.config
+++ b/nuget.config
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <packageSources>
+        <clear />
+        <add key="nuget" value="https://api.nuget.org/v3/index.json" />
         <add key="github" value="https://nuget.pkg.github.com/egil/index.json" />
     </packageSources>
     <packageSourceCredentials>
