--- a/nuget.config
+++ b/nuget.config
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
+    <add key="nuget" value="https://api.nuget.org/v3/index.json" />
     <add key="github" value="https://nuget.pkg.github.com/egil/index.json" />
-    <add key="NuGet official package source" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
+  <activePackageSource>
+    <add key="All" value="(Aggregate source)" />
+  </activePackageSource>  
   <packageSourceCredentials>
     <github>
       <add key="Username" value="egil" />
