updates to publish workflow

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -62,5 +62,5 @@ jobs:
           dotnet new bunit --no-restore -o ${GITHUB_WORKSPACE}/Test
           dotnet restore ${GITHUB_WORKSPACE}/Test/Test.csproj --source ${GITHUB_WORKSPACE}/packages
           dotnet test ${GITHUB_WORKSPACE}/Test
-      - name: Push packages to GitHub Packages
+      - name: Push packages to GitHub Package Registry
         run: dotnet nuget push ${GITHUB_WORKSPACE}/packages/'*.nupkg' --skip-duplicate
