--- a/.github/workflows/NUGET-PUSH.yml
+++ b/.github/workflows/NUGET-PUSH.yml
@@ -57,5 +57,7 @@ jobs:
           dotnet new bunit --no-restore -o ${GITHUB_WORKSPACE}/Test
           dotnet restore ${GITHUB_WORKSPACE}/Test/Test.csproj --source ${GITHUB_WORKSPACE}/packages
           dotnet test ${GITHUB_WORKSPACE}/Test
-      - name: Push packages to GitHub Packages
+      - name: Push packages to NuGet
         run: dotnet nuget push ${GITHUB_WORKSPACE}/packages/'*.nupkg' -k ${{ secrets.NUGET_KEY }} -s https://api.nuget.org/v3/index.json --skip-duplicate
+      - name: Push packages to GitHub Package Registry
+        run: dotnet nuget push ${GITHUB_WORKSPACE}/packages/'*.nupkg' -k ${{ secrets.GITHUB_TOKEN }} -s  https://nuget.pkg.github.com/egil/index.json --skip-duplicate
