--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -32,10 +32,7 @@ jobs:
           files: '["*.csproj", "**/*.csproj"]'
       - uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '3.1.202' 
-          source-url: https://nuget.pkg.github.com/egil/index.json
-        env:
-          NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}          
+          dotnet-version: '3.1.202'     
       - name: Building library
         run: |
           dotnet restore src
@@ -63,4 +60,11 @@ jobs:
           dotnet restore ${GITHUB_WORKSPACE}/Test/Test.csproj --source ${GITHUB_WORKSPACE}/packages
           dotnet test ${GITHUB_WORKSPACE}/Test
       - name: Push packages to GitHub Package Registry
-        run: dotnet nuget push ${GITHUB_WORKSPACE}/packages/'*.nupkg' --skip-duplicate
+        run: |
+           for f in ${GITHUB_WORKSPACE}/packages/*.nupkg
+           do
+             curl -vX PUT -u "egil:${{ secrets.GITHUB_TOKEN }}" -F package=@$f https://nuget.pkg.github.com/egil/
+           done
+        shell: bash          
+#      - name: Push packages to GitHub Package Registry
+#        run: dotnet nuget push ${GITHUB_WORKSPACE}/packages/'*.nupkg' --skip-duplicate
