--- a/.github/workflows/CI-PR.yml
+++ b/.github/workflows/CI-PR.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     branches:
       - dev
+    paths:
+      - 'sample/**'
+      - 'src/**'
     paths-ignore:
       - 'docs/**'
 
