--- a/.github/workflows/RELEASE.yml
+++ b/.github/workflows/RELEASE.yml
@@ -22,7 +22,7 @@ jobs:
           setAllVars: true
       - name: Setting VERSION and BRANCH env
         run: |
-          echo "::set-env name=VERSION::$NBGV_NuGetPackageVersion"
+          echo "::set-env name=VERSION::$NBGV_SimpleVersion$NBGV_PrereleaseVersion"
           echo "::set-env name=BRANCH::$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//_/g')"
       - name: Update tokens in project files
         uses: cschleiden/replace-tokens@v1
@@ -30,10 +30,7 @@ jobs:
           files: '["*.csproj", "**/*.csproj"]'
       - uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '3.1.202' 
-          source-url: https://api.nuget.org/v3/index.json
-        env:
-          NUGET_AUTH_TOKEN: ${{secrets.NUGET_KEY}}          
+          dotnet-version: '3.1.202'  
       - name: Building library
         run: |
           dotnet restore src
@@ -60,7 +57,14 @@ jobs:
           dotnet new bunit --no-restore -o ${GITHUB_WORKSPACE}/Test
           dotnet restore ${GITHUB_WORKSPACE}/Test/Test.csproj --source ${GITHUB_WORKSPACE}/packages
           dotnet test ${GITHUB_WORKSPACE}/Test
-      # - name: Push packages to NuGet
-      #   run: dotnet nuget push ${GITHUB_WORKSPACE}/packages/'*.nupkg' -k ${{ secrets.NUGET_KEY }} -s https://api.nuget.org/v3/index.json --skip-duplicate
+ # - name: Push packages to NuGet
+      #   run: dotnet nuget push ${GITHUB_WORKSPACE}/packages/'*.nupkg' -k ${{ secrets.NUGET_KEY }} -s https://api.nuget.org/v3/index.json --skip-duplicate          
+    # - name: Push packages to GitHub Package Registry
+    #    run: |
+    #       for f in ${GITHUB_WORKSPACE}/packages/*.nupkg
+    #       do
+    #         curl -vX PUT -u "egil:${{ secrets.GITHUB_TOKEN }}" -F package=@$f https://nuget.pkg.github.com/egil/
+    #       done
+    #    shell: bash               
       # - name: Push packages to GitHub Package Registry
       #   run: dotnet nuget push ${GITHUB_WORKSPACE}/packages/'*.nupkg' -k ${{ secrets.GITHUB_TOKEN }} -s  https://nuget.pkg.github.com/egil/index.json --skip-duplicate
