--- a/.github/workflows/NUGET-PUSH.yml
+++ b/.github/workflows/NUGET-PUSH.yml
@@ -50,7 +50,7 @@ jobs:
           dotnet pack src/bunit.xunit/ -c Release -o ${GITHUB_WORKSPACE}/packages -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true /p:PublicRelease=true
           dotnet pack src/bunit/ -c Release -o ${GITHUB_WORKSPACE}/packages -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true /p:PublicRelease=true
       - name: Buidling template package
-        run: dotnet pack src/bunit.template/ -c Release -o ${GITHUB_WORKSPACE}/packages
+        run: dotnet pack src/bunit.template/ -c Release -o ${GITHUB_WORKSPACE}/packages /p:PublicRelease=true
       - name: Verifying template
         run: |
           dotnet new --install ${GITHUB_WORKSPACE}/packages/bunit.template.$VERSION.nupkg
