--- a/docs/.editorconfig
+++ b/docs/.editorconfig
@@ -1,16 +1,17 @@
 root = true
 
 [*]
-indent_style = tab
-indent_size = tab
-tab_size = 4
+indent_style = space
+tab_size = 2
 charset = utf-8
 trim_trailing_whitespace = true
-insert_final_newline = true
+insert_final_newline = false
 
 [*.cs]
-tab_size = 4
-dotnet_sort_system_directives_first = true
+indent_style = space
+tab_size = 2
+trim_trailing_whitespace = true
+insert_final_newline = false
 
 [*.{xml,config,*proj,nuspec,props,resx,targets,yml,tasks}]
 tab_size = 2
@@ -28,9 +29,12 @@ tab_size = 4
 tab_size = 4
 end_of_line = lf
 
-[*.{yml,yaml}]
+[*.{yml,yaml,md}]
 indent_style = space
 tab_size = 2
+
+[*.md]
+trim_trailing_whitespace = false
 
 [*.{cs,razor}]
 dotnet_diagnostic.BL0001.severity = none
