--- a/docs/docs.csproj
+++ b/docs/docs.csproj
@@ -5,6 +5,14 @@
     <RazorLangVersion>3.0</RazorLangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="samples\tests\razor\FixtureWithCutAndFragments.html" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="samples\tests\razor\FixtureWithCutAndFragments.html" />
+  </ItemGroup>
+
   <ItemGroup>    
     <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.4" />
